# Masters

./: .gitignore  .gitmodules  CMakeLists.txt
cmake/: FindJsoncpp.cmake  FindTensorFlow.cmake
sources/: BoW.cpp  CMakeLists.txt  VaE.py  VaEtest.py  brisk.cpp  demo.cpp  main.cpp  opticalFlow.cpp
sources/common/: CMakeLists.txt  M_estimators.h  camera_pyramid.h  correspondence.h  dense_SFM.h  indexed_map.h  lucas_kanade_dense.h  pinhole_camera.h  transformations.h
sources/core/: CMakeLists.txt  camera.cpp  camera.h  slam_system.cpp  slam_system.h  slam_system_options.h
sources/core/features/: feature_detector.h
sources/core/gtsam/: depth_prior_factor.h  factor_graph.h  gtsam_traits.h  gtsam_utilities.h  photometric_factor.h  reprojection_factor.h  sparse_geometric_factor.h  uniform_sampler.h
sources/core/mapping/: frame.h  keyframe.h  keyframe_map.h  mapper.h  work.cpp  work.h  work_implementation.cpp  work_implementation.h  work_manager.h
sources/core/network/: decoder_network.cpp  decoder_network.h  tfwrap.h
sources/core/vision/: camera_tracker.cpp  camera_tracker.h  loop_detector.h
sources/cuda/: CMakeLists.txt  cuda_SE3_aligner.cpp  cuda_SE3_aligner.h  cuda_SFM_aligner.cpp  cuda_SFM_aligner.h  cuda_context.cpp  cuda_context.h  cuda_depth_aligner.cpp  cuda_depth_aligner.h  cuda_image_proc.cpp  cuda_image_proc.h  device_info.h  kernel_utilities.h  launch_utilities.h  reduction_items.h  synced_pyramid.h
sources/drivers/: CMakeLists.txt  camera_interface.h  camera_interface_factory.cpp  camera_interface_factory.h
sources/drivers/dataset/: dataset_interface.h  file_interface.cpp  file_interface.h  kitti_interface.cpp  kitti_interface.h  scannet_interface.cpp  scannet_interface.h
